# document-annotation-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 202604240001_create_document_jobs.py  202604240002_add_extraction_payload.py  202604240003_add_annotation_tasks.py
app/: __init__.py  annotation_schema.py  annotation_tasks.py  config.py  cost.py  db.py  file_validation.py  logging_config.py  main.py  models.py  queue.py  schemas.py  storage.py  worker.py
app/annotators/: __init__.py  agent.py  agent_tools.py  anthropic.py  base.py  mock.py  openai.py
app/extractors/: __init__.py  base.py  csv.py  dispatch.py  pdf.py  spreadsheet.py
samples/: README.md  contacts.csv  transactions.xlsx
tests/: conftest.py  test_agent_annotator.py  test_agent_tools.py  test_annotation_schema.py  test_config.py  test_file_validation.py  test_prompt_injection_guards.py  test_queue.py  test_schemas.py  test_shared_volume.py  test_single_call_annotators.py  test_upload.py
